[package]
name = "kyz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for kyz - a cross-platform secrets manager"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
schemars.workspace = true
keyring.workspace = true
age.workspace = true
secrecy.workspace = true
